--- a/views/layouts/user/header.ejs
+++ b/views/layouts/user/header.ejs
@@ -53,7 +53,7 @@
                             <li>
                                 <a href="#">Links</a>
                                 <ul>
-                                    <%if(user){%>
+                                    <%if(userData){%>
                                     <div class="dropdown">
                                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           MY ACCOUNT
